--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,14 +1,27 @@
 global:
-  scrape_interval: 15s   # How often to scrape targets
+  scrape_interval: 5s   # How often to scrape targets
 
 scrape_configs:
   - job_name: 'product-mdm-service'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['host.docker.internal:8080']
+      - targets: ['service-product-mdm:8080']
+        labels : 
+           env : dev
+           service : product
   - job_name: 'customer-mdm-service'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['host.docker.internal:8081']
+      - targets: ['service-customer-mdm:8080']
+        labels : 
+           env : dev
+           service : customer
+  - job_name: 'order-sales-service'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['service-order-sales:8080']
+        labels : 
+           env : dev
+           service : order
 rule_files:
   - "alert_rules.yml"
