--- a/prometheus/alert_rules.yml
+++ b/prometheus/alert_rules.yml
@@ -31,3 +31,14 @@ groups:
     annotations:
       summary: "Very low request rate"
       description: "Less than 0.1 requests/sec for 1 minute"
+
+  - alert: HighRequestRateOrderService
+    expr: rate(http_server_requests_seconds_count{service="order"}[1m]) > 10
+    for: 30s
+    labels:
+      severity: warning
+      service: order
+      env: dev
+    annotations:
+      summary: "High request rate on order-service"
+      description: "Order service is handling more than 10 requests/sec (dev)."
